"ask jack" fix on mobile and scaling

--- a/src/output.css
+++ b/src/output.css
@@ -558,10 +558,6 @@ video {
   pointer-events: none;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -586,6 +582,14 @@ video {
   bottom: 0px;
 }
 
+.bottom-16 {
+  bottom: 4rem;
+}
+
+.bottom-40 {
+  bottom: 10rem;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -596,6 +600,10 @@ video {
 
 .left-2\/4 {
   left: 50%;
+}
+
+.left-9 {
+  left: 2.25rem;
 }
 
 .right-0 {
@@ -618,40 +626,24 @@ video {
   top: 50%;
 }
 
-.top-24 {
-  top: 6rem;
-}
-
-.top-64 {
-  top: 16rem;
-}
-
 .top-48 {
   top: 12rem;
 }
 
-.left-9 {
-  left: 2.25rem;
+.bottom-32 {
+  bottom: 8rem;
 }
 
-.bottom-3\/4 {
-  bottom: 75%;
+.bottom-64 {
+  bottom: 16rem;
 }
 
-.bottom-96 {
-  bottom: 24rem;
+.bottom-20 {
+  bottom: 5rem;
 }
 
-.bottom-1\.5 {
-  bottom: 0.375rem;
-}
-
-.bottom-16 {
-  bottom: 4rem;
-}
-
-.bottom-40 {
-  bottom: 10rem;
+.bottom-24 {
+  bottom: 6rem;
 }
 
 .-z-10 {
@@ -668,10 +660,6 @@ video {
 
 .z-30 {
   z-index: 30;
-}
-
-.z-50 {
-  z-index: 50;
 }
 
 .z-40 {
@@ -844,6 +832,10 @@ video {
   width: 1.75rem;
 }
 
+.w-80 {
+  width: 20rem;
+}
+
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -856,18 +848,6 @@ video {
 .w-max {
   width: -moz-max-content;
   width: max-content;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-64 {
-  width: 16rem;
-}
-
-.w-72 {
-  width: 18rem;
 }
 
 .max-w-2xl {
@@ -915,11 +895,6 @@ video {
 
 .-translate-y-2\/4 {
   --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-1\/2 {
-  --tw-translate-x: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1145,11 +1120,6 @@ video {
 .bg-figmayellow {
   --tw-bg-opacity: 1;
   background-color: rgb(241 172 29 / var(--tw-bg-opacity));
-}
-
-.bg-figmabeige {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 203 162 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-45 {
